[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/LoadingScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/images/title.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/themes/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/ui/load/loading_bar.png" type="Texture" id=4]

[node name="LoadingScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 106.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 72.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 964.0
margin_bottom = 97.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 55.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 55.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "TEXT."

[node name="LoadingVBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -60.0
margin_right = 750.0
margin_bottom = -24.0

[node name="LoadingLabel" type="Label" parent="LoadingVBoxContainer"]
margin_right = 720.0
margin_bottom = 21.0
theme = ExtResource( 3 )
text = "Loading..."

[node name="LoadingBar" type="TextureProgress" parent="LoadingVBoxContainer"]
margin_top = 25.0
margin_right = 720.0
margin_bottom = 36.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.392157, 0.392157, 0.392157, 1 )
